--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
 
     <div class = "First" id = "Home">
-        <div class = "button-container" style = "margin:20px">
-                <button type = "button" class = "btn btn-outline-light btn-lg">Welcome to Howard's Site!</button>
+        <div class = "button-container animated fadeIn delay-1s slower" style = "margin:20px">
+                <button type = "button" class = "btn btn-outline-light btn-lg">Get Started!</button>
 
         </div>
         <!--
