--- a/index.html
+++ b/index.html
@@ -517,9 +517,9 @@
 
                 <div class = "col col-xl-12 col-md-12 col-sm-12 col-xs-12">
          <br>
-                    <p class = "lead">Johnny Pacific</p>
-                    <p class = "lead">20133 Saticoy Ave. Winnetka, CA</p>
-                    <p class = "lead">818.885.6927</p>
+                    <p class = "lead">Howard's Custom Detail</p>
+                    <p class = "lead">1234 Lorem St. Ipsum Nu, CA</p>
+                    <p class = "lead">818.123.7890</p>
                     <br>
                     
                     <p class=  "lead">Made by Salvador Salgado</p>
