--- a/index.html
+++ b/index.html
@@ -9,21 +9,13 @@
    
 </head>
     <body>
-        
-
-
-
-<nav class = "navbar navbar-dark navbar-expand-lg fixed-top" style = "background-color:rgb(39, 39, 39);">
-
+<nav class = "navbar navbar-dark navbar-expand-xlg fixed-top" style = "background-color:rgb(39, 39, 39);">
     <a class="navbar-brand" href="#">
-        
         <h4 class = "lead">Welcome to the site!</h4>
     </a>
-
         <button class="navbar-toggler" data-toggle="collapse" data-target="#collapseToggle">
             <span class="navbar-toggler-icon"></span>
         </button>
-   
   <div class = "collapse navbar-collapse" id = "collapseToggle">
       <ul class = "navbar-nav ml-auto">
           <li class = "navbar-item">
